Question du jour

--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,17 @@ form input {
     display: block;
 }
 
+.input-group {
+    margin-bottom: 10px;
+}
+
 
 /* CARD */
 
 .team-card {
     border: #000000 1px solid;
     border-radius: 5px;
+    margin: 5px;
 }
 
 
