--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@
     cursor: pointer;
 }
 
+.col-6 {
+    width: 50%;
+    display: inline-block;
+}
+
+.text-center {
+    text-align: center;
+}
+
 
 /* Onglet */
 
@@ -42,10 +51,11 @@ form input {
 
 /* CARD */
 
-.team-card {
+.card {
     border: #000000 1px solid;
     border-radius: 5px;
     margin: 5px;
+    padding: 5px;
 }
 
 
